--- a/src/assets/css/global.styl
+++ b/src/assets/css/global.styl
@@ -10,7 +10,7 @@ html, body
     height 100%
 
 body
-    background-color #fff
+    background-color #fafafa
     color #2c3e50
     font-family: 'Mandali', sans-serif
     -webkit-font-smoothing antialiased
